<resources>
    <string name="app_name">Transport Authority App</string>
    <string name="app_main_name">BGCTUB Transport Tracking App</string>
    <string name="tips_activity_title">Transport Authority App: Tips</string>
    <string name="helpActivityTitle">Help</string>
    <string name="forgotPassActivityTitle">Forgot Password</string>
    <string name="changePassActivityTitle">Account Settings</string>
    <string name="DeleteAccountActivityTitle">Account Settings</string>

    <string name="off_internet_message">Please, turn on your phone\'s internet connection.</string>
    <string name="notification_text">Please, keep on your phone\'s internet connection. Click here for information.</string>
    <string name="signIn_signup_req_text">Important: Don\'t have an account? Please contact with BGCTUB Transport Tracking App authority to Sign up.</string>
    <string name="resend_ver_email_message_req">Dear user, your email is not verified. Please choose confirm button to send email with verification link.</string>
    <string name="resend_ver_email_message_success">Sent email successfully . Please, check your email to verify your account and sign in. We sent an email with verification link.</string>
    <string name="forgetPassInfoMsg">Please, check your email. We sent an email with password recovery link. </string>

    <string name="title_activity_app_main">AppMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="settings_menu_text">Settings</string>
    <string name="exit_menu_text">Exit</string>
    <string name="logout_menu_text">Logout</string>
    <string name="reload_menu_text">Reload</string>
    <string name="news_and_update_menu_text">News and Update</string>
    <string name="newsAndUpdateActivity">News and Update</string>
    <string name="settingsActivityTitle">Settings</string>
    <string name="menu_trans_info">Transport Information</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_report">Report</string>
    <string name="menu_about">About</string>
    <string name="transInfoActivityTitle">Transport Information</string>
    <string name="updateProfileActivityTitle">My Profile</string>


    <string name="sign_in_help_text">Enter your account email and password to sign in. If you are a new user,
        you will be given the opportunity to verify your account.
        If you forget the password, click on the "forgot password?" option.
        Enter your account email to reset password. We will send an email with password reset link.</string>
    <string name="homeHelpText">You can see the total number of buses and how many buses are active now from here.</string>
    <string name="trans_info_help_text">To see the bus list click \'Transport Information\' option from navigation bar. Click on bus information summary to see details information of specific bus.</string>
    <string name="report_feedback_helptext">To give feedback or report choose \'Report and Feedback\' option from navigation bar. Give a title of your report or feedback and enter details information about your report or feedback.</string>
    <string name="internet_message_help">Please, keep on your phone\'s internet connection.</string>
</resources>