<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#F8FBFB"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <!-- Header & Edit option -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:id="@+id/nav_transport_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="Help"
                    android:textColor="#0C0C0C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/transInfo_View_edit_imgBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F8FBFB"
                    android:src="@drawable/ic_action_help" />

            </LinearLayout>
            <!-- prequisite header -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:src="@android:drawable/btn_star"
                    app:tint="?attr/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/internet_message_help"
                    android:textColor="#0c0c0c"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <!-- prequisite header -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:src="@android:drawable/btn_star"
                    app:tint="#CA1010" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn_signup_req_text"
                    android:textColor="#CA1010"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>



            <!-- sign in help-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/signin"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/sign_in_help_text"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />



            <!-- verification help-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account Verification"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/verify_mesg"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="Choose confirm button to send email with verification link."
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />



            <!-- Home help-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home and Transport Status"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/home"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/homeHelpText"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />


            <!--Transport Information  help-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Transport Information"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/buslist"

                />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/businformation"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/trans_info_help_text"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />



            <!-- Report help-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Report &amp; feedback"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/report"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/report_feedback_helptext"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />






            <!-- bottom nav app name-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingTop="10dp"
                android:text="@string/app_name"
                android:textColor="#0c0c0c"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/app_main_name"
                android:textColor="#0c0c0c"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>